--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,13 @@
 name: pure-web-strapi
 on:
+  push:
+    branches: [ develop, main ]
   pull_request:
-    branches:
-      - develop
+    branches: [ develop, main ]
+
 jobs:
-  run-ci:
+  build:
+
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -12,14 +15,13 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
 
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-        
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
