--- a/api/package.json
+++ b/api/package.json
@@ -17,16 +17,11 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "6.0.0",
     "express": "^4.17.1",
-    "graphql-cli": "^2.16.7",
     "graphql-iso-date": "^3.6.1",
-    "graphql-playground-middleware-express": "^1.7.22",
     "graphql-tag": "^2.12.4",
     "graphql-type-json": "^0.3.2",
     "graphql-yoga": "^1.18.3",
-    "ioredis": "^4.17.3",
     "is-github-url": "^1.2.2",
-    "merge": "^2.1.1",
-    "mongodb": "^3.6.6",
     "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.9.10",
     "mongoose-paginate": "^5.0.3",
@@ -34,8 +29,7 @@
     "nodemon": "^1.18.7",
     "puppeteer": "^5.5.0",
     "ramda": "^0.27.1",
-    "response-time": "^2.3.2",
-    "uuid": "^8.3.1"
+    "response-time": "^2.3.2"
   },
   "jest": {
     "testEnvironment": "node",
