--- a/api/Dockerfile.prod
+++ b/api/Dockerfile.prod
@@ -1,10 +1,9 @@
-FROM node:10 AS builder
+FROM node:15 AS builder
 
 # -------- install chrome ----------
 # See https://crbug.com/795759
 RUN apt-get update && apt-get install -yq libgconf-2-4
 
-# That's necessary because pupeeter needs chrome already installed
 RUN apt-get update && apt-get install -y wget --no-install-recommends \
     && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
     && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main">> /etc/apt/sources.list.d/google.list' \
@@ -18,25 +17,22 @@ RUN apt-get update && apt-get install -y wget --no-install-recommends \
 ADD https://github.com/Yelp/dumb-init/releases/download/v1.2.0/dumb-init_1.2.0_amd64 /usr/local/bin/dumb-init
 RUN chmod +x /usr/local/bin/dumb-init
 
+# ------------------
+
+# Set work directory to /app
 WORKDIR /app
 
+# Install app dependencies
 COPY package.json package.json
 RUN yarn install
 
+# Copy script files
 COPY . .
-
-# -------- NGINX ----------
-
-FROM nginx:latest as build-nginx
-WORKDIR /app
-COPY --from=builder /app .
-COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
-
-# -------- MSB ----------
 
 FROM node:15-alpine
 WORKDIR /app
-COPY --from=build-nginx /app .
+COPY --from=builder /app .
 EXPOSE 4444
 # Runs "/usr/bin/dumb-init -- yarn start"
+ENTRYPOINT ["dumb-init", "--"]
 CMD ["yarn", "start"]
