--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon -e js,graphql -x node src/index.js",
     "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
+    "build": "babel src --out-dir dist",
     "test": "jest --coverage"
   },
   "keywords": [],
