--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,33 +8,33 @@ services:
     restart: always
     networks: 
       - db-network
-      - app-network
+      # - app-network
     ports: 
       - "8000:80"
     depends_on:
       - api
-  app:
-    build:
-      context: ./app
-      dockerfile: Dockerfile
-    volumes:
-      - ./app:/usr/src/app
-      - /usr/src/app/node_modules
-      - /usr/src/app/.next
-    ports: 
-      - "3000:3000"
-    env_file:
-      - ./app/.env
-    networks:
-      - app-network
+  # app:
+  #   build:
+  #     context: ./app
+  #     dockerfile: Dockerfile
+  #   volumes:
+  #     - ./app:/usr/src/app
+  #     - /usr/src/app/node_modules
+  #     - /usr/src/app/.next
+  #   ports: 
+  #     - "3000:3000"
+  #   env_file:
+  #     - ./app/.env
+  #   networks:
+  #     - app-network
   api:
     container_name: api
     restart: always
     build:
       context: ./api
       dockerfile: Dockerfile
-    ports: 
-      - "4444:4444"
+    # ports: 
+    #   - "4444:4444"
     links:
       - mongo
       - redis
@@ -59,5 +59,5 @@ services:
 networks:
   db-network:
     driver: bridge
-  app-network:
-    driver: bridge
+  # app-network:
+  #   driver: bridge
