feat(app): :tada: first commit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "conventionalCommits.scopes": [
         "sonarcloud",
-        "improvement"
+        "improvement",
+        "app"
     ]
 }
